[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/fonts/miglia/Miglia.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/miglia/MigliaFur.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/screens/GameOver.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.313726 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="DynamicFont" id=3]
size = 75
outline_size = 5
outline_color = Color( 0, 0, 0, 0.196078 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.392157 )
border_width_bottom = 10
border_color = Color( 1, 0.954427, 0.671875, 1 )
expand_margin_left = 25.0
expand_margin_right = 25.0
expand_margin_top = 20.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.196078 )
border_width_bottom = 10
border_color = Color( 0.8, 0.8, 0.8, 0.294118 )
expand_margin_left = 25.0
expand_margin_right = 25.0
expand_margin_top = 20.0

[sub_resource type="DynamicFont" id=6]
size = 90
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.588235 )
corner_radius_top_left = 70
corner_radius_top_right = 70
corner_radius_bottom_right = 70
corner_radius_bottom_left = 70

[sub_resource type="StyleBoxFlat" id=8]
corner_radius_top_left = 70
corner_radius_top_right = 70
corner_radius_bottom_right = 70
corner_radius_bottom_left = 70

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.196078 )
corner_radius_top_left = 70
corner_radius_top_right = 70
corner_radius_bottom_right = 70
corner_radius_bottom_left = 70

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 70
corner_radius_top_right = 70
corner_radius_bottom_right = 70
corner_radius_bottom_left = 70
corner_detail = 10

[sub_resource type="DynamicFont" id=11]
size = 75
extra_spacing_top = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 250
outline_size = 15
outline_color = Color( 0, 0, 0, 0.196078 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 125
outline_size = 10
outline_color = Color( 0, 0, 0, 0.196078 )
use_filter = true
extra_spacing_top = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 75
extra_spacing_top = 15
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1980 ), Vector2( 0, -100 ), Vector2( 0, 50 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("User_form:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1150, 680 ), Vector2( -1150, 680 ), Vector2( -340, 680 ), Vector2( 200, 680 ), Vector2( -50, 680 ), Vector2( 65, 680 ) ]
}

[node name="GameOver" type="Panel"]
visible = false
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 1980.0
margin_right = 1280.0
margin_bottom = 3900.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
self_modulate = Color( 0.32549, 0.32549, 0.32549, 1 )
margin_right = 1280.0
margin_bottom = 1920.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User_form" type="Panel" parent="."]
margin_left = -1150.0
margin_top = 680.0
margin_bottom = 1410.0
rect_pivot_offset = Vector2( 575, 365 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="User_form"]
margin_top = 60.0
margin_right = 1150.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.964706, 0.737255, 1 )
text = "Enter your name below 
for our leaderboard."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterName" type="LineEdit" parent="User_form"]
margin_left = 175.0
margin_top = 310.0
margin_right = 975.0
margin_bottom = 410.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 400, 50 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/selection_color = Color( 1, 1, 1, 0.392157 )
custom_colors/cursor_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.823529 )
align = 3
expand_to_text_length = true
placeholder_text = "Player name"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="User_form"]
margin_left = 365.0
margin_top = 493.678
margin_right = 785.0
margin_bottom = 633.678
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
disabled = true
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_top = 160.0
margin_right = 1280.0
margin_bottom = 471.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0.0 M"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_message" type="Label" parent="."]
modulate = Color( 0.8, 0.8, 0.8, 1 )
margin_top = 425.0
margin_right = 1280.0
margin_bottom = 587.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "NEW SCORE!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRestart" type="Button" parent="."]
margin_left = 47.243
margin_top = 1580.0
margin_right = 531.243
margin_bottom = 1720.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLeaderboard" type="Button" parent="."]
margin_left = 591.789
margin_top = 1580.0
margin_right = 1221.79
margin_bottom = 1720.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "LeaderBoard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show = SubResource( 15 )
